# VideoPush

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/cheng/videopush/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_example_cheng_videopush_jni_PushNative.h  pushvideo.c
app/src/main/java/com/example/cheng/videopush/: MainActivity.java
app/src/main/java/com/example/cheng/videopush/jni/: PushNative.java
app/src/main/java/com/example/cheng/videopush/listener/: LiveStateChangeListener.java
app/src/main/java/com/example/cheng/videopush/params/: AudioParam.java  VideoParam.java
app/src/main/java/com/example/cheng/videopush/pusher/: AudioPusher.java  LivePusher.java  Pusher.java  VideoPusher.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/cheng/videopush/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
